# machine-learning-project

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  TODOS.txt  hello.txt  pyproject.toml
data/interim/: agg_posts_lda_results.csv  agg_posts_weighted.csv  test_topics.csv
data/processed/: df_train_test.csv  test_x.csv  test_y.csv  train_x.csv  train_y.csv
docs/: Makefile  conf.py  index.rst  make.bat
models/: decision_tree_model.pkl
notebooks/: 0.1-vst-fetch-published-timestamps.ipynb  0.2-message-text-cleaning.ipynb  1.0-vst-explorative-data-analysis.ipynb  1.0-vst-initial-data-exploration.ipynb  1.1-vst-explorative-data-analysis.ipynb  1.1-vst-further-data-analysis.ipynb  2.0-vst-topic-modelling.ipynb  2.0-vst-translate-texts-for-lda.ipynb  2.1-vst-latent-dirichlet-analysis-lda-Copy1.ipynb  2.1-vst-latent-dirichlet-analysis-lda.ipynb  3.0-vst-add-features-data-for-modelling.ipynb  3.0-vst-process-data-before-regression-modelling.ipynb  3.0-vst-process-data-for-modelling.ipynb  3.1-vst-decision-trees.ipynb  3.2-vst-catboost-algorithm.ipynb  4.0-vst-shap-comparison.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/cleaning/: make_cleaning_and_eda.ipynb
